templog.txt
  File "17dynamicLoadBalance.py", line 48
    print("master created {} values for sleep times:".format(workTimes.size), flush=True)
                                                                                   ^
SyntaxError: invalid syntax
  File "17dynamicLoadBalance.py", line 48
    print("master created {} values for sleep times:".format(workTimes.size), flush=True)
                                                                                   ^
SyntaxError: invalid syntax
--------------------------------------------------------------------------
Primary job  terminated normally, but 1 process returned
a non-zero exit code. Per user-direction, the job has been aborted.
--------------------------------------------------------------------------
--------------------------------------------------------------------------
mpirun detected that one or more processes exited with non-zero status, thus causing
the job to be terminated. The first process to do so was:

  Process name: [[19161,1],0]
  Exit code:    1
--------------------------------------------------------------------------
